# codet

./: cabal.haskell-ci  cabal.project  cabal.project.local  codet.cabal  run-tests.sh
.github/workflows/: haskell-ci.yml
codet/: codet.cabal
codet-plugin/: LICENSE  codet-plugin.cabal
codet-plugin/src-plugin/Plugin/: GHC.hs
codet-plugin/src/Language/Haskell/TH/CodeT/: Plugin.hs
codet-plugin/tests/: codet-plugin-tests-900.txt  codet-plugin-tests-902.txt  codet-plugin-tests-906.txt  codet-plugin-tests-910.txt  codet-plugin-tests-914.txt  codet-plugin-tests.hs  codet-plugin-tests.txt
codet/src/Language/Haskell/TH/: CodeT.hs
codet/src/Language/Haskell/TH/CodeT/: Unsafe.hs
codet/tests/: codet-tests-900.txt  codet-tests-902.txt  codet-tests-906.txt  codet-tests-914.txt  codet-tests.hs  codet-tests.txt
src/Language/Haskell/TH/: CodeT.hs
src/Language/Haskell/TH/CodeT/: Unsafe.hs
