cabal-version:   2.4
name:            codet
version:         0.1
license:         BSD-3-Clause
license-file:    LICENSE
author:          Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:      Oleg Grenrus <oleg.grenrus@iki.fi>
category:        Data
build-type:      Simple
extra-doc-files: CHANGELOG.md
tested-with:     GHC ==9.8.1
synopsis:        CodeT
description:     CodeT.

source-repository head
  type:     git
  location: https://github.com/phadej/codet.git

common language
  default-language: Haskell2010

library
  import:          language
  hs-source-dirs:  src
  exposed-modules:
    Language.Haskell.TH.CodeT
    Language.Haskell.TH.CodeT.Unsafe

  build-depends:
    , base             ^>=4.19.0.0
    , template-haskell
