cabal-version:   2.4
name:            codet-plugin
version:         0.1
license:         BSD-3-Clause
license-file:    LICENSE
author:          Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:      Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:       2023 Oleg Grenrus, Well-Typed LLP
category:        Data
build-type:      Simple
extra-doc-files: CHANGELOG.md
tested-with:     GHC ==9.8.1
synopsis:
  GHC type-checker plugin for solving LiftT instances from codet

description:
  GHC type-checker plugin for solving LiftT instances from [codet](https://hackage.haskell.org/package/codet) package.

source-repository head
  type:     git
  location: https://github.com/phadej/codet.git
  subdir:   codet-plugin

common language
  default-language:   Haskell2010
  default-extensions: OverloadedRecordDot

library
  import:          language
  hs-source-dirs:  src src-plugin
  exposed-modules: Language.Haskell.TH.CodeT.Plugin
  other-modules:   Plugin.GHC
  build-depends:
    , base   ^>=4.19.0.0
    , codet  ^>=0.1
    , ghc    ^>=9.8.1

test-suite codet-plugin-tests
  import:         language
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        codet-plugin-tests.hs
  build-depends:
    , base
    , codet
    , codet-plugin
    , template-haskell

  -- test dependencies
  build-depends:
    , directory     ^>=1.3.8.1
    , filepath      ^>=1.4.100.4
    , syb           ^>=0.7.2.4
    , tasty         ^>=1.5
    , tasty-golden  ^>=2.3.5
    , transformers  ^>=0.6.1.0
