cabal-version:   2.4
name:            codet
version:         0.1
license:         BSD-3-Clause
license-file:    LICENSE
author:          Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:      Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:       2023 Oleg Grenrus, Well-Typed LLP
category:        Data
build-type:      Simple
extra-doc-files: CHANGELOG.md
tested-with:     GHC ==9.8.1
synopsis:        CodeT
description:     CodeT.

source-repository head
  type:     git
  location: https://github.com/phadej/codet.git
  subdir:   codet

common language
  default-language: Haskell2010

library
  import:          language
  hs-source-dirs:  src
  exposed-modules:
    Language.Haskell.TH.CodeT
    Language.Haskell.TH.CodeT.Unsafe

  build-depends:
    , base              ^>=4.19.0.0
    , bytestring        ^>=0.12.0.2
    , containers        ^>=0.6.8
    , template-haskell  ^>=2.21.0.0
    , text              ^>=2.1
    , time              ^>=1.12.2

test-suite codet-tests
  import:         language
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        codet-tests.hs
  build-depends:
    , base
    , codet
    , template-haskell

  -- test dependencies
  build-depends:
    , directory     ^>=1.3.8.1
    , filepath      ^>=1.4.100.4
    , syb           ^>=0.7.2.4
    , tasty         ^>=1.5
    , tasty-golden  ^>=2.3.5
    , transformers  ^>=0.6.1.0
